Fixed menu as it was not showing the whole thing for short names

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -276,7 +276,7 @@ img.center {
 }
 
 #user_menu {
-  margin-right: 60px;
+  margin-right: 140px;
   padding-top: 9px;
   padding-bottom: 9px;
   font-size: 1.2em;
